Snapshot 57693bd828

* Make it work with the latest xulrunner. (marco)

Snapshot 5931be8dc1

* Fix dialogs color. (marco)

Snapshot 40da3581a5

* Adapt to xulrunner 1.9 alpha 6. (marco)